--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fixed-math",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Converts a decimal number using fixed-point notation, avoiding the conversion from number to string of Number.toFixed, and allowing the user to choose the approximation method to be used",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -14,7 +14,7 @@
     "watch-test": "npm run test -- --watchAll"
   },
   "files": [
-    "./dist"
+    "dist/"
   ],
   "keywords": [
     "math",
